--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,17 @@
-              - name: generate-sitemap
-                uses: cicirello/generate-sitemap@v1.10.1
-            
+name: Generate Sitemap
+
+on:
+  push:
+    branches:
+      - main  # or the name of your default branch
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Generate Sitemap
+      uses: cicirello/generate-sitemap@v1.10.1
